--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -22,7 +22,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <title>마이페이지</title>
 
 
@@ -161,6 +161,7 @@
 
 
         function posting() {
+
             let title = $('#title').val()
             let content = $("#content").val()
 
@@ -312,22 +313,7 @@
                 <div class="wrap">
                     <div class="jumbotron jumbotron-fluid">
                         <div class="container">
-                            <h1>다녀온 전시회 <button onclick="open_close()" type="button" class="btn btn-light" id="recordopen">기록 하기</button></h1>
-                            <div class="posting-box" id="review-box" style="display:none">
-
-                                <div class="custom-file">
-                                    <input type="file" class="custom-file-input" id="file">
-                                    <label class="custom-file-label">전시회 사진 올리기</label>
-                                </div>
-
-                                <div class="form-group">
-                                    <input type="email" class="form-control" id="title" placeholder="전시회 이름">
-                                </div>
-                                <div class="form-group">
-                                    <textarea class="form-control" id="content" rows="3" placeholder="리뷰 내용 작성"></textarea>
-                                </div>
-                                <button onclick="posting()" type="button" class="btn btn-light">저장하기</button>
-                            </div>
+                            <h1>다녀온 전시회 <button onclick='$("#modal-edit").addClass("is-active")' type="button" class="btn btn-light" id="recordopen">기록 하기</button></h1>
                         </div>
                     </div>
                     <div class="card-columns" id="cards-box">
@@ -348,7 +334,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">타이틀</h5>
                                 <p class="card-text">리뷰</p>
-                                <button onclick="delete_diary()" type="button" class="btn btn-light float-right">삭제하기</button>
+                                <button type="button" class="btn btn-light float-right">삭제하기</button>
                             </div>
                         </div>
                     </div>
@@ -357,6 +343,39 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="modal" id="modal-edit">
+        <div class="modal-background" onclick='$("#modal-edit").removeClass("is-active")'></div>
+        <div class="modal-content">
+            <div class="box">
+                <article class="media">
+                    <div class="media-content">
+                        <div class="field">
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="file">
+                                <label class="custom-file-label">전시회 사진 올리기</label>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="title" placeholder="전시회 이름">
+                            </div>
+                        </div>
+
+                        <div class="field">
+                            <div class="form-group">
+                                <textarea class="form-control" id="content" rows="3" placeholder="리뷰 내용 작성"></textarea>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <button onclick='posting()' type="button" class="btn btn-light float-right">저장하기</button>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </div>
+        <button class="modal-close is-large" aria-label="close" onclick='$("#modal-edit").removeClass("is-active")'></button>
     </div>
 
 
